// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiRange allows value prop to accept a number 1`] = `
<div
  class="euiDateRangeWrapper euiDateRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiDateRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
    <div
      class="euiDateRangeTooltip"
    >
      <output
        class="euiDateRangeTooltip__value euiDateRangeTooltip__value--right"
        style="left:8%"
      >
        8
      </output>
    </div>
  </div>
</div>
`;

exports[`EuiRange allows value prop to accept empty string 1`] = `
<div
  class="euiDateRangeWrapper euiDateRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiDateRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value=""
    />
  </div>
</div>
`;

exports[`EuiRange is rendered 1`] = `
<div
  class="euiDateRangeWrapper euiDateRange testClass1 testClass2"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <input
      aria-hidden="false"
      aria-label="aria-label"
      class="euiDateRangeSlider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props compressed should render 1`] = `
<div
  class="euiDateRangeWrapper euiDateRangeWrapper--compressed euiDateRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiDateRangeSlider euiDateRangeSlider--compressed"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props custom ticks should render 1`] = `
<div
  class="euiDateRangeWrapper euiDateRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
    style="margin-right:0.6em"
  >
    <div
      class="euiDateRangeTicks"
    >
      <button
        class="euiDateRangeTick euiDateRangeTick--isCustom"
        style="left:20%"
        tabindex="-1"
        title="20kb"
        type="button"
        value="20"
      >
        20kb
      </button>
      <button
        class="euiDateRangeTick euiDateRangeTick--isCustom"
        style="left:100%"
        tabindex="-1"
        title="100kb"
        type="button"
        value="100"
      >
        100kb
      </button>
    </div>
    <input
      aria-hidden="false"
      class="euiDateRangeSlider euiDateRangeSlider--hasTicks"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props disabled should render 1`] = `
<div
  class="euiDateRangeWrapper euiDateRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack euiDateRangeTrack--disabled"
  >
    <input
      aria-hidden="false"
      class="euiDateRangeSlider"
      disabled=""
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props fullWidth should render 1`] = `
<div
  class="euiDateRangeWrapper euiDateRangeWrapper--fullWidth euiDateRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiDateRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props input should render 1`] = `
<div
  class="euiDateRangeWrapper euiDateRange testClass1 testClass2"
>
  <div
    aria-hidden="true"
    class="euiDateRangeTrack"
  >
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="euiDateRangeSlider"
      data-test-subj="test subject string"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
      value="8"
    />
  </div>
  <div
    class="euiDateRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiDateRangeInput euiDateRangeInput--max"
        data-test-subj="test subject string"
        id="id"
        max="100"
        min="0"
        name="name"
        step="1"
        style="width:4.4em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiRange props labels should render 1`] = `
<div
  class="euiDateRangeWrapper euiDateRange"
>
  <label
    class="euiDateRangeLabel euiDateRangeLabel--min"
  >
    0
  </label>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiDateRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
  <label
    class="euiDateRangeLabel euiDateRangeLabel--max"
  >
    100
  </label>
</div>
`;

exports[`EuiRange props levels should render 1`] = `
<div
  class="euiDateRangeWrapper euiDateRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <div
      class="euiDateRangeLevels"
    >
      <span
        class="euiDateRangeLevel euiDateRangeLevel--danger"
        style="width:20%"
      />
      <span
        class="euiDateRangeLevel euiDateRangeLevel--success"
        style="width:80%"
      />
    </div>
    <input
      aria-hidden="false"
      class="euiDateRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="20"
    />
  </div>
</div>
`;

exports[`EuiRange props range should render 1`] = `
<div
  class="euiDateRangeWrapper euiDateRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <div
      class="euiDateRangeHighlight"
    >
      <div
        class="euiDateRangeHighlight__progress"
        style="margin-left:0%;width:8%"
      />
    </div>
    <input
      aria-hidden="false"
      class="euiDateRangeSlider euiDateRangeSlider--hasRange"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props slider should display in popover 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiDateRange__popover"
>
  <div
    class="euiPopover__anchor"
  >
    <div>
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="aria-label"
            class="euiFieldNumber euiDateRangeInput euiDateRangeInput--max"
            data-test-subj="test subject string"
            id="id"
            max="100"
            min="0"
            name="name"
            step="1"
            type="number"
            value="8"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiRange props ticks should render 1`] = `
<div
  class="euiDateRangeWrapper euiDateRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
    style="margin-right:0.6em"
  >
    <div
      class="euiDateRangeTicks"
      style="margin:0 -8.333333333333332%;left:0;right:0"
    >
      <button
        class="euiDateRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="0"
      >
        0
      </button>
      <button
        class="euiDateRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="20"
      >
        20
      </button>
      <button
        class="euiDateRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="40"
      >
        40
      </button>
      <button
        class="euiDateRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="60"
      >
        60
      </button>
      <button
        class="euiDateRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="80"
      >
        80
      </button>
      <button
        class="euiDateRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="100"
      >
        100
      </button>
    </div>
    <input
      aria-hidden="false"
      class="euiDateRangeSlider euiDateRangeSlider--hasTicks"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props value should render 1`] = `
<div
  class="euiDateRangeWrapper euiDateRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiDateRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="200"
    />
    <div
      class="euiDateRangeTooltip"
    >
      <output
        class="euiDateRangeTooltip__value euiDateRangeTooltip__value--left"
        style="right:0%"
      >
        before200after
      </output>
    </div>
  </div>
</div>
`;
